--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>player de música</title>
+  <title>#boracodar player de música</title>
 </head>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" href="./assets/hans-eiskonen-8Pm_A-OHJGg-unsplash 1.png">
 <body>
   <div id="app">
     <div id="player-1">
